Progress for page content

--- a/index.html
+++ b/index.html
@@ -29,12 +29,33 @@
 	</div>
 
 	<div class="content">
+
 		<div id="video-container">
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/K8s8KsgvQhU" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/K8s8KsgvQhU" frameborder="0" allowfullscreen></iframe>
+		<div class="video-information">
+			<div class="video-title">
+				<div id="title">
+				<h1 class="title">From Indian Lakes "American Dreams" (Official Video)</h1>
+				</div>
+			</div>
+			<div class="user-channel">
+			<img class="user-profile user-item" src="https://yt3.ggpht.com/-T4B6PyHxX6U/AAAAAAAAAAI/AAAAAAAAAAA/lIbOe6GsysU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" width="48px" height="48px">
+			<p class="user-item" id="channel-title"><a href="https://www.youtube.com/channel/UCK1dBSEH2afCphwI5LXBNRQ">triplecrownrecords</a></p>
+			<div class="subscribe user-item">
+				<button>
+				<i class="fa fa-youtube-play fa-lg user-item" aria-hidden="true"></i>
+				Subscribe
+				</button><span class="subscriber-count user-item">30K</span>
+			</div>
+		</div>
 		</div>
 
 
-
+		<div class="queue-videos right">
+			<p id="next right-item">Up next</p>
+			<span class="autoplay right-item">Autoplay<i class="fa fa-info-circle right-item" aria-hidden="true"></i></span>
+			<ul>
+			<li>
 	</div>
 
 
