Continue my progress on replication youtube page player

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/webstyle.css">
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 
 </head>
 
@@ -64,7 +65,17 @@
 			</div>
 			</div>
 
-		
+			<div class="bottom-buttons">
+				<i class="fa fa-plus bt-bottom" aria-hidden="true"></i>
+				<span id="add bt-bottom">Add to</span>
+				<i class="fa fa-share bt-bottom" aria-hidden="true"></i>
+				<span id="share bt-bottom">Share</span>
+				<i class="fa fa-ellipsis-h bt-bottom" aria-hidden="true"></i>
+				<span id="more bt-bottom">More</span>
+
+
+			</div>
+		</div>
 
 		</div>
 
@@ -73,7 +84,7 @@
 				<p id="next right-item">Up next</p>
 				<span class="autoplay right-item">Autoplay<i class="fa fa-info-circle right-item" aria-hidden="true"></i></span>
 			</div>
-		</div>
+		
 	</div>
 
 </body>
