code the queue videos

--- a/index.html
+++ b/index.html
@@ -81,10 +81,105 @@
 
 
 			<div class="queue-videos right">
-				<p id="next right-item">Up next</p>
-				<span class="autoplay right-item">Autoplay<i class="fa fa-info-circle right-item" aria-hidden="true"></i></span>
+				<p class="next left-itm">Up next</p>
+				<span class="autoplay right-itm">Autoplay<i class="fa fa-info-circle" aria-hidden="true"></i></span>
+				<!-- Need to understand below code for autoplay checkbox -->
+				<span class="checkbox-on-off">
+				<input id="autoplay-checkbox" type="checkbox" checked="" class="right-itm">
+				    <label for="autoplay-checkbox" id="autoplay-checkbox-label right-itm">
+				      <span class="checked">&nbsp;</span>
+				      <span class="unchecked"></span>
+				      <span class="toggle">&nbsp;</span>
+				    </label>
+				</span>
+				 <!-- checkbox code above -->
+
+
+				<div class="video-list">
+				<ul class="video-ul">
+				<div class="video-li-info">
+					<span class="video-li-title side-info">Fron Indian Lakes - "Ghost" (Official Video)</span>
+					<span class="video-li-channel side-info">triplecrownrecords</span>
+					<span class="video-li-views side-info">259,888 views</span>
+					</div>
+				<li class="video-next">
+					<span class="video-info-contain">
+					<img src="https://i.ytimg.com/vi/iaV4KrgptnU/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=68&sigh=qenv6xalx4MujYOsYP7dwpx80rE" class="video-1-img video-thumbnail"><span class="video-time">3:59</span>
+					</span>
+				</li>
+				</ul>
+
+				<div class="next-videos-play">
+				<ul class="queue-video-ul">
+					<div class="video-li-info">
+					<span class="video-li-title side-info">Fron Indian Lakes - "Ghost" (Official Video)</span>
+					<span class="video-li-channel side-info">triplecrownrecords</span>
+					<span class="video-li-views side-info">259,888 views</span>
+					</div>
+				<li class="next-videos">
+					<span class="video-info-contain">
+					<img src="https://i.ytimg.com/vi/8NZaeXSDqc0/hqdefault.jpg?sqp=-oaymwEWCKgBEF5IWvKriqkDCQgBFQAAiEIYAQ==&rs=AOn4CLAeiH8pbzkrPxrve8FobkwzyO0FlA" class="video-2-img video-thumbnail"><span class="video-time">3:51</span>
+					</span>
+				</li>
+				</ul>
+
+				<ul class="queue-video-ul">
+					<div class="video-li-info">
+					<span class="video-li-title side-info">Fron Indian Lakes - "Ghost" (Official Video)</span>
+					<span class="video-li-channel side-info">triplecrownrecords</span>
+					<span class="video-li-views side-info">259,888 views</span>
+					</div>
+				<li class="next-videos">
+
+					<span class="video-info-contain">
+					<img src="https://i.ytimg.com/vi/QWIjavxGNcc/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=68&sigh=mhd4yvuI6ag0Gk1DnPhRzyy4Q_s" class="video-3-img video-thumbnail"><span class="video-time">4:00</span>
+					</span>
+				</li>
+				</ul>
+
+				<ul class="queue-video-ul">
+					<div class="video-li-info">
+					<span class="video-li-title side-info">Fron Indian Lakes - "Ghost" (Official Video)</span>
+					<span class="video-li-channel side-info">triplecrownrecords</span>
+					<span class="video-li-views side-info">259,888 views</span>
+					</div>
+				<li class="next-videos">
+					<span class="video-info-contain">
+					<img src="https://i.ytimg.com/vi/kUJ5vFHkXBo/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=68&sigh=ET2RajuBR3dsyGH-WHasp1VfiyA" class="video-4-img video-thumbnail"><span class="video-time">3:00</span>
+					</span>
+				</li>
+				</ul>
+
+				<ul class="queue-video-ul">
+					<div class="video-li-info">
+					<span class="video-li-title side-info">Fron Indian Lakes - "Ghost" (Official Video)</span>
+					<span class="video-li-channel side-info">triplecrownrecords</span>
+					<span class="video-li-views side-info">259,888 views</span>
+					</div>
+				<li class="next-videos">
+					<span class="video-info-contain">
+					<img src="https://i.ytimg.com/vi/wun77eC4a00/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=68&sigh=lgTxFKFKQ53pyuILcq8eUG3IsXw" class="video-5-img video-thumbnail"><span class="video-time">47:22</span>
+					</span>
+				</li>
+				</ul>
+
+				<ul class="queue-video-ul">
+					<div class="video-li-info">
+					<span class="video-li-title side-info">Fron Indian Lakes - "Ghost" (Official Video)</span>
+					<span class="video-li-channel side-info">triplecrownrecords</span>
+					<span class="video-li-views side-info">259,888 views</span>
+					</div>
+				<li class="next-videos">
+					<span class="video-info-contain">
+					<img src="https://i.ytimg.com/vi/p3DTa4DFnZo/hqdefault.jpg?custom=true&w=168&h=94&stc=true&jpg444=true&jpgq=90&sp=68&sigh=N2qM4TRgK3k88zgec8t7MbbDZxI" class="video-6-img video-thumbnail"><span class="video-time">42:36</span>
+					</span>
+				</li>
+				</ul>
+
+				</div>
+
 			</div>
-		
+			
 	</div>
 
 </body>
