--- a/index.html
+++ b/index.html
@@ -36,46 +36,62 @@
 
 		<div id="video-container">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/K8s8KsgvQhU" frameborder="0" allowfullscreen></iframe>
-		<div class="video-information">
 
-			<div class="video-title">
-				<div id="title">
-				<h1 class="title">From Indian Lakes "American Dreams" (Official Video)</h1>
+			<div class="video-information">
+
+				<div class="video-title">
+					<div id="title">
+						<h1 class="title">From Indian Lakes "American Dreams" (Official Video)</h1>
+					</div>
 				</div>
+
+					<div class="user-channel">
+						<img class="user-profile user-item" src="https://yt3.ggpht.com/-T4B6PyHxX6U/AAAAAAAAAAI/AAAAAAAAAAA/lIbOe6GsysU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" width="48px" height="48px">
+						<p class="user-item" id="channel-title"><a href="https://www.youtube.com/channel/UCK1dBSEH2afCphwI5LXBNRQ">triplecrownrecords</a></p>
+						<div class="subscribe user-item">
+							<button>
+							<i class="fa fa-youtube-play fa-lg user-item" aria-hidden="true"></i>
+							Subscribe
+							</button>
+							<span class="subscriber-count user-item">30K</span>
+						</div>
+
+						<div class="view-counts block count-contain">
+							<span class="views">53,794,203 views</span>
+							<span class="bar-likes block"></span>
+							<i class="fa fa-thumbs-up block yt-f" aria-hidden="true"></i>
+							<span class="likes-count yt-f">20M</span>
+							<i class="fa fa-thumbs-down block yt-f" aria-hidden="true"></i>
+							<span class="down-count yt-f">0</span>
+						</div>
+					</div>
+
+						<div class="bottom-buttons">
+							<i class="fa fa-plus bt-bottom" aria-hidden="true"></i>
+							<span id="add bt-bottom">Add to</span>
+							<i class="fa fa-share bt-bottom" aria-hidden="true"></i>
+							<span id="share bt-bottom">Share</span>
+							<i class="fa fa-ellipsis-h bt-bottom" aria-hidden="true"></i>
+							<span id="more bt-bottom">More</span>
+						</div>
 			</div>
 
-			<div class="user-channel">
-				<img class="user-profile user-item" src="https://yt3.ggpht.com/-T4B6PyHxX6U/AAAAAAAAAAI/AAAAAAAAAAA/lIbOe6GsysU/s88-c-k-no-mo-rj-c0xffffff/photo.jpg" width="48px" height="48px">
-				<p class="user-item" id="channel-title"><a href="https://www.youtube.com/channel/UCK1dBSEH2afCphwI5LXBNRQ">triplecrownrecords</a></p>
-			<div class="subscribe user-item">
-					<button>
-					<i class="fa fa-youtube-play fa-lg user-item" aria-hidden="true"></i>
-					Subscribe
-					</button>
-					<span class="subscriber-count user-item">30K</span>
-			</div>
+						<div class="video-description">
+						<span class="publish-date">Published on Oct 20, 2016</span>
+						<div class="main-description">
+						<span class="item-desc">From Indian Lakes "American Dreams" off of Everything Feels Better Now 
+								</span>
+						</div>
+						<span class="category block-itm"><span class="title-block">Category</span> <a href="https://www.youtube.com/channel/UC-9-kyTW8ZkZNDHQJ6FgpwQ">Music</a></span>
+						<span class="license block-itm"><span class="title-block">License</span> Standard Youtube License</span>
 
-			<div class="view-counts block count-contain">
-				<span class="views">53,794,203 views</span>
-				<span class="bar-likes block"></span>
-				<i class="fa fa-thumbs-up block yt-f" aria-hidden="true"></i>
-				<span class="likes-count yt-f">20M</span>
-				<i class="fa fa-thumbs-down block yt-f" aria-hidden="true"></i>
-				<span class="down-count yt-f">0</span>
-			</div>
-			</div>
+						</div>
 
-			<div class="bottom-buttons">
-				<i class="fa fa-plus bt-bottom" aria-hidden="true"></i>
-				<span id="add bt-bottom">Add to</span>
-				<i class="fa fa-share bt-bottom" aria-hidden="true"></i>
-				<span id="share bt-bottom">Share</span>
-				<i class="fa fa-ellipsis-h bt-bottom" aria-hidden="true"></i>
-				<span id="more bt-bottom">More</span>
-
-
-			</div>
-		</div>
+						<div class="comment-section">
+						<div class="Comment-box">
+						<span class="comment-service">Comments currently unavailable</span>
+						</div>
+						</div>
 
 		</div>
 
@@ -178,10 +194,34 @@
 
 				</div>
 
+					</div>
 			</div>
-			
+
+
+
 	</div>
 
+
+
+	<footer>
+
+	<div class="main-footer">
+	<ul class="item-nav">
+	<li class="item">
+	<img class="brand-logo item" src="./images/logo1.png">
+	</li>
+
+	<li class="item">
+	<button class="language-btn item"><i class="fa fa-language" aria-hidden="true"> Language: English</i>
+	</button>
+	</li>
+
+	<li class="item">
+	<button class="content-location item"><span class="btn-txt">Content Location: Philippines</span></button>
+	</li>
+
+	</ul>
+	</footer>
 </body>
 
 
